--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -1,3 +1,13 @@
+[tool.poetry]
+name = "back"
+version = "0.1.0"
+description = ""
+authors = ["reflaxess123 <reflaxess@yandex.ru>"]
+packages = []
+
+[tool.poetry.dependencies]
+python = ">=3.9"
+
 [tool.black]
 line-length = 120
 target-version = ['py310']
@@ -35,32 +45,15 @@ exclude = [
     ".ruff_cache",
     "migrations", # Alembic migrations
 ] 
-[project]
-name = "back"
-version = "0.1.0"
-description = ""
-authors = [
-    {name = "reflaxess123",email = "reflaxess@yandex.ru"}
-]
-readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "fastapi",
-    "uvicorn",
-    "sqlalchemy",
-    "alembic",
-    "asyncpg",
-    "python-jose[cryptography]==3.3.0",
-    "passlib[bcrypt]==1.7.4",
-    "redis==5.0.3",
-    "python-dotenv==1.0.1",
-    "ruff==0.4.5",
-    "black==24.4.2",
-    "psycopg2-binary",
-]
-package-mode = false
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0"
+httpx = "^0.27.0"
+pytest-asyncio = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = [ "." ]
