fix: replace su-exec with gosu for better compatibility with Debian bookworm

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     procps \
     passwd \
-    su-exec \
+    gosu \
     && rm -rf /var/lib/apt/lists/*
 
 # Устанавливаем Poetry
