--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["reflaxess123 <reflaxess@yandex.ru>"]
 packages = []
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.9"
