--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -6,8 +6,8 @@ WORKDIR /app
 # Копируем package.json и package-lock.json
 COPY package*.json ./
 
-# Устанавливаем зависимости
-RUN npm ci --only=production
+# Устанавливаем зависимости (включая dev для сборки)
+RUN npm ci
 
 # Копируем исходный код (исключая .env через .dockerignore)
 COPY . .
