--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -7,10 +7,18 @@ WORKDIR /app
 COPY package*.json ./
 
 # Устанавливаем зависимости (включая dev для сборки)
-RUN npm ci
+RUN npm ci --verbose
 
 # Копируем исходный код (исключая .env через .dockerignore)
 COPY . .
+
+# Очищаем кеш Next.js
+RUN rm -rf .next
+
+# Проверяем наличие критических файлов
+RUN ls -la src/shared/lib/utils.ts && \
+    echo "Checking TypeScript config..." && \
+    cat tsconfig.json | grep -A 5 -B 5 "paths"
 
 # Собираем Next.js приложение
 RUN npm run build
