--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,11 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+# Python lib directories (but not frontend lib directories)
+/lib/
+/lib64/
+back/lib/
+back/lib64/
 parts/
 sdist/
 var/
