--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.115.0"
 uvicorn = "^0.31.0"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.0"
+asyncpg = "^0.30.0"
 redis = "^5.1.0"
 sqlalchemy = "^2.0.0"
 pydantic = "^2.10.0"
