--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,10 +37,12 @@ services:
     build:
       context: ./front
       dockerfile: Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
     container_name: garden-store-frontend
     restart: unless-stopped
     environment:
-      - NEXT_PUBLIC_API_URL=http://backend:4000
+      - NEXT_PUBLIC_API_URL=http://185.21.13.91:4001
     ports:
       - "3003:3000"
     depends_on:
