--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -17,9 +17,10 @@ redis = "^5.1.0"
 sqlalchemy = "^2.0.0"
 pydantic = "^2.10.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
-passlib = {extras = ["bcrypt"], version = "^1.7.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.20"
 alembic = "^1.14.0"
+bcrypt = "4.0.1"
 
 [tool.black]
 line-length = 120
