--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -14,7 +14,9 @@ COPY . .
 
 # Объявляем ARG для переменных сборки
 ARG NEXT_PUBLIC_API_URL
+ARG BACKEND_URL
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV BACKEND_URL=$BACKEND_URL
 
 # Очищаем кеш Next.js
 RUN rm -rf .next
