--- a/alembic.ini
+++ b/alembic.ini
@@ -99,7 +99,7 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 # black.options = -l 79 REVISION_SCRIPT_FILENAME
 
 # lint with attempts to fix using "ruff" - use the exec runner, execute a binary
-# hooks = ruff
+# hooks = ruffss
 # ruff.type = exec
 # ruff.executable = %(here)s/.venv/bin/ruff
 # ruff.options = check --fix REVISION_SCRIPT_FILENAME
