--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -21,6 +21,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.20"
 alembic = "^1.14.0"
 bcrypt = "4.0.1"
+websockets = "^13.0"
 
 [tool.black]
 line-length = 120
