Update CORS settings to include new domains (103.74.93.55:3003 and sadovnick.store)

--- a/.env.production
+++ b/.env.production
@@ -15,4 +15,7 @@ DEBUG=false
 
 # API URLs для фронтенда
 NEXT_PUBLIC_API_URL=http://185.21.13.91:4001
-BACKEND_URL=http://backend:4000 
+BACKEND_URL=http://backend:4000
+
+# CORS domains (добавлены новые)
+EXTERNAL_ORIGINS=http://185.21.13.91:3003,https://185.21.13.91:3003,http://103.74.93.55:3003,https://103.74.93.55:3003,http://sadovnick.store,https://sadovnick.store 
