Use environment variables from Dokploy GUI instead of hardcoded values

--- a/.env.production
+++ b/.env.production
@@ -13,9 +13,12 @@ SECRET_KEY=dJ9rnpdvdjQmQCMxzptngl4SS6h17ZgN80MDX8QgsZY
 # Режим отладки
 DEBUG=false
 
-# API URLs для фронтенда
-NEXT_PUBLIC_API_URL=http://185.21.13.91:4001
-BACKEND_URL=http://backend:4000
+# API URLs для фронтенда (используем внешний адрес для всех запросов)
+NEXT_PUBLIC_API_URL=http://103.74.93.55:4001
+BACKEND_URL=http://103.74.93.55:4001
+
+# WebSocket URL для чата
+NEXT_PUBLIC_WS_URL=ws://103.74.93.55:4001
 
 # CORS domains (добавлены новые)
 EXTERNAL_ORIGINS=http://185.21.13.91:3003,https://185.21.13.91:3003,http://103.74.93.55:3003,https://103.74.93.55:3003,http://sadovnick.store,https://sadovnick.store 
