--- a/.env.production
+++ b/.env.production
@@ -13,9 +13,11 @@ SECRET_KEY=dJ9rnpdvdjQmQCMxzptngl4SS6h17ZgN80MDX8QgsZY
 # Режим отладки
 DEBUG=false
 
-# API URLs для фронтенда (используем внешний адрес для всех запросов)
+# API URLs для фронтенда
+# Для браузера (client-side) - внешний адрес
 NEXT_PUBLIC_API_URL=http://103.74.93.55:4001
-BACKEND_URL=http://103.74.93.55:4001
+# Для server-side запросов - внутренний адрес (в Docker сети)
+BACKEND_URL=http://backend:4000
 
 # WebSocket URL для чата
 NEXT_PUBLIC_WS_URL=ws://103.74.93.55:4001
