--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,10 +45,11 @@ services:
     container_name: garden-store-frontend
     restart: unless-stopped
     environment:
-      # Переменные задаются через Dokploy GUI
+      # Для браузера - внешний URL (задается через Dokploy GUI)
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
-      - BACKEND_URL=${BACKEND_URL}
       - NEXT_PUBLIC_WS_URL=${NEXT_PUBLIC_WS_URL}
+      # Для server-side запросов - внутренний адрес
+      - BACKEND_URL=http://backend:4000
     ports:
       - "3003:80"
     depends_on:
