Update .env.production to match docker-compose.yml internal addresses

--- a/.env.production
+++ b/.env.production
@@ -13,14 +13,9 @@ SECRET_KEY=dJ9rnpdvdjQmQCMxzptngl4SS6h17ZgN80MDX8QgsZY
 # Режим отладки
 DEBUG=false
 
-# API URLs для фронтенда
-# Для браузера (client-side) - внешний адрес
-NEXT_PUBLIC_API_URL=http://103.74.93.55:4001
-# Для server-side запросов - внутренний адрес (в Docker сети)
-BACKEND_URL=http://backend:4000
-
-# WebSocket URL для чата
-NEXT_PUBLIC_WS_URL=ws://103.74.93.55:4001
+# API URLs для фронтенда (внутренние Docker адреса)
+NEXT_PUBLIC_API_URL=http://backend:4000
+NEXT_PUBLIC_WS_URL=ws://backend:4000
 
 # CORS domains (добавлены новые)
 EXTERNAL_ORIGINS=http://185.21.13.91:3003,https://185.21.13.91:3003,http://103.74.93.55:3003,https://103.74.93.55:3003,http://sadovnick.store,https://sadovnick.store 
