--- a/.env.production
+++ b/.env.production
@@ -17,5 +17,8 @@ DEBUG=false
 NEXT_PUBLIC_API_URL=http://backend:4000
 NEXT_PUBLIC_WS_URL=ws://backend:4000
 
+# Внутренний URL фронтенда для SSR запросов
+FRONTEND_INTERNAL_URL=http://localhost:80
+
 # CORS domains (добавлены новые)
 EXTERNAL_ORIGINS=http://185.21.13.91:3003,https://185.21.13.91:3003,http://103.74.93.55:3003,https://103.74.93.55:3003,http://sadovnick.store,https://sadovnick.store 
