--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
       # API URL для всех запросов (используем имя контейнера для внутреннего соединения)
       - NEXT_PUBLIC_API_URL=http://backend:4000
       - NEXT_PUBLIC_WS_URL=ws://backend:4000
+      # Внутренний URL фронтенда для SSR запросов
+      - FRONTEND_INTERNAL_URL=http://localhost:80
     ports:
       - "3003:80"
     depends_on:
