--- a/.env.production
+++ b/.env.production
@@ -13,9 +13,9 @@ SECRET_KEY=dJ9rnpdvdjQmQCMxzptngl4SS6h17ZgN80MDX8QgsZY
 # Режим отладки
 DEBUG=false
 
-# API URLs для фронтенда (внутренние Docker адреса)
-NEXT_PUBLIC_API_URL=http://backend:4000
-NEXT_PUBLIC_WS_URL=ws://backend:4000
+# API URLs для фронтенда (внешние адреса для браузера)
+NEXT_PUBLIC_API_URL=http://103.74.93.55:4001
+NEXT_PUBLIC_WS_URL=ws://103.74.93.55:4001
 
 # Внутренний URL фронтенда для SSR запросов
 FRONTEND_INTERNAL_URL=http://localhost:80
