--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,14 +40,14 @@ services:
       context: ./front
       dockerfile: Dockerfile
       args:
-        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://backend:4000}
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://103.74.93.55:4001}
         - BACKEND_URL=${BACKEND_URL:-http://backend:4000}
     container_name: frontend
     restart: unless-stopped
     environment:
-      # API URL для всех запросов (используем имя контейнера для внутреннего соединения)
-      - NEXT_PUBLIC_API_URL=http://backend:4000
-      - NEXT_PUBLIC_WS_URL=ws://backend:4000
+      # API URL для браузера (внешний адрес сервера)
+      - NEXT_PUBLIC_API_URL=http://103.74.93.55:4001
+      - NEXT_PUBLIC_WS_URL=ws://103.74.93.55:4001
       # Внутренний URL фронтенда для SSR запросов
       - FRONTEND_INTERNAL_URL=http://localhost:80
     ports:
