--- a/.env.production
+++ b/.env.production
@@ -14,11 +14,11 @@ SECRET_KEY=dJ9rnpdvdjQmQCMxzptngl4SS6h17ZgN80MDX8QgsZY
 DEBUG=false
 
 # API URLs для фронтенда (внешние адреса для браузера)
-NEXT_PUBLIC_API_URL=http://103.74.93.55:4001
-NEXT_PUBLIC_WS_URL=ws://103.74.93.55:4001
+NEXT_PUBLIC_API_URL=https://server.sadovnick.store
+NEXT_PUBLIC_WS_URL=wss://server.sadovnick.store
 
 # Внутренний URL фронтенда для SSR запросов
 FRONTEND_INTERNAL_URL=http://localhost:80
 
 # CORS domains (добавлены новые)
-EXTERNAL_ORIGINS=http://185.21.13.91:3003,https://185.21.13.91:3003,http://103.74.93.55:3003,https://103.74.93.55:3003,http://sadovnick.store,https://sadovnick.store 
+EXTERNAL_ORIGINS=http://185.21.13.91:3003,https://185.21.13.91:3003,http://103.74.93.55:3003,https://103.74.93.55:3003,http://sadovnick.store,https://sadovnick.store,https://server.sadovnick.store 
